try to fix alignment bug for one of the buttons

--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ button#random h3{
     text-align: center;
     margin-left:25%;
     margin-right:25%;
+    justify-content:center;
 }
 
 @keyframes rainbow-bg{
